--- a/package.json
+++ b/package.json
@@ -28,25 +28,39 @@
     "prettier": "^2.1.1",
     "typescript": "^4.0.2"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.8",
-    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
-    "@types/helmet": "^4.0.0",
-    "@types/morgan": "^1.9.2",
+    "@types/express-graphql": "^0.9.0",
+    "@types/express-rate-limit": "^5.1.0",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongoose": "^5.7.36",
+    "@types/morgan": "^1.9.1",
     "@types/multer": "^1.4.4",
+    "@types/randomcolor": "^0.5.5",
+    "apollo-server-express": "^2.18.2",
+    "bcrypt": "^3.0.8",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dataloader": "^2.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "helmet": "^4.2.0",
+    "express-graphql": "^0.11.0",
+    "express-rate-limit": "^5.1.3",
+    "express-validator": "^6.4.0",
+    "fetchio-js": "^1.1.1",
+    "graphql": "^15.4.0",
+    "helmet": "^4.1.0",
+    "joi": "^17.3.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.5.2",
+    "mongoose": "^5.8.11",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "uid": "^2.0.0",
-    "uuid": "^8.3.1"
+    "nodemailer": "^6.4.3",
+    "randomcolor": "^0.6.2",
+    "uid": "^1.0.0",
+    "uuid": "^3.4.0"
   }
 }
