--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/morgan": "^1.9.1",
     "@types/multer": "^1.4.4",
     "@types/randomcolor": "^0.5.5",
+    "@types/request": "^2.48.5",
     "apollo-server-express": "^2.18.2",
     "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
@@ -60,6 +61,7 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.3",
     "randomcolor": "^0.6.2",
+    "request": "^2.88.2",
     "uid": "^1.0.0",
     "uuid": "^3.4.0"
   }
