--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/randomcolor": "^0.5.5",
     "@types/request": "^2.48.5",
     "@types/uuid": "^8.3.0",
+    "apollo-server": "^2.19.0",
     "apollo-server-express": "^2.18.2",
     "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
